# emudbg

./: CMakeLists.txt  CPU.hpp  My_CPU.cpp  README.md  asm_function.asm  emudbg.cpp  xgetbv.asm
libs/: zydis_wrapper.idb  zydis_wrapper.lib
